fix: Restrict Roboto subsets to languages in use
The Fontsource faces() mixin defaults to bundling all 9 Roboto subsets.
Restrict to latin, latin-ext, greek, and greek-ext to cover the exhibit's
languages (de/en/nl/fr/it/el) and drop unused cyrillic/math/symbols/vietnamese
faces from the build.

--- a/extras/src/sass/_futurium-suitcase-font.scss
+++ b/extras/src/sass/_futurium-suitcase-font.scss
@@ -1,8 +1,10 @@
 @use "../../vendor/roboto/scss/mixins" as Roboto;
 
-@include Roboto.faces($weights: 400, $display: auto, $directory: "/vendor/roboto/files");
-@include Roboto.faces($weights: 500, $display: auto, $directory: "/vendor/roboto/files");
-@include Roboto.faces($weights: 700, $display: auto, $directory: "/vendor/roboto/files");
+$roboto-subsets: (latin, latin-ext, greek, greek-ext);
+
+@include Roboto.faces($subsets: $roboto-subsets, $weights: 400, $display: auto, $directory: "/vendor/roboto/files");
+@include Roboto.faces($subsets: $roboto-subsets, $weights: 500, $display: auto, $directory: "/vendor/roboto/files");
+@include Roboto.faces($subsets: $roboto-subsets, $weights: 700, $display: auto, $directory: "/vendor/roboto/files");
 
 @mixin roboto-regular {
   font-family: 'Roboto', sans-serif;
